# lib-spark

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_RUNTIME_PARAMS.md  INFRASTRUCTURE.md  README.md  estrategia_documentacao_yaml_lib_spark.md  pyproject.toml  spark_utils.py  stg_vendas.py
scripts/: test_on_emr.py
src/lib_spark/: __init__.py  config.py  core.py  exceptions.py  execution_resolver.py
src/lib_spark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib_spark/audit/: logger.py
src/lib_spark/catalog/: resolver.py
src/lib_spark/maintenance/: table_maintenance.py
src/lib_spark/optimization/: write_optimizer.py
src/lib_spark/planner/: execution_planner.py
src/lib_spark/reader/: table_reader.py
src/lib_spark/schema_manager/: comparator.py  evolver.py
src/lib_spark/validator/: validators.py
src/lib_spark/writer/: append.py  base.py  merge.py  overwrite.py
tests/: conftest.py  test_config.py  test_core_integration.py  test_planner.py  test_runtime.py  test_schema_manager.py  test_validators.py  test_writers.py
